| Bug #35305 | Partition test failure: partition_symlink | ||
|---|---|---|---|
| Submitted: | 15 Mar 2008 4:33 | Modified: | 28 Mar 2008 19:34 |
| Reporter: | Antony Curtis | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Tests | Severity: | S3 (Non-critical) |
| Version: | 5.1+ | OS: | Any |
| Assigned to: | Mattias Jonsson | CPU Architecture: | Any |
[15 Mar 2008 4:33]
Antony Curtis
[15 Mar 2008 22:33]
Mattias Jonsson
Verified, setting same DWI as Bug#35306, since they are very similar, same problem, but different test files. (related to fix for bug#32167).
[17 Mar 2008 15:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/44114 ChangeSet@1.2566, 2008-03-17 16:11:26+01:00, mattiasj@witty. +9 -0 Bug#35305: partition_symlink test failures Updated the test due to bug 32167 Corrected spelling of error message
[27 Mar 2008 11:21]
Bugs System
Pushed into 5.1.24-rc
[27 Mar 2008 17:53]
Bugs System
Pushed into 6.0.5-alpha
[28 Mar 2008 19:34]
Paul DuBois
Fix involves test case change. No changelog entry needed.
