Bug#35305: partition_symlink test failures

Updated the test due to bug 32167

Corrected spelling of error message


mysql-test/r/partition_not_windows.result:
  Updated test result due to test case changes and corrected spelling error
mysql-test/r/partition_symlink.result:
  Bug#35305: partition_symlink test failure
  
  Updated test result due to test case changes
mysql-test/r/symlink.result:
  Updated test result due to test case changes and corrected spelling error
mysql-test/t/disabled.def:
  Bug#35305: partition_symlink test failure
  
  Enable the test after it has been fixed
mysql-test/t/partition_not_windows.test:
  Removed disable/enable_query_log for better result files
mysql-test/t/partition_symlink.test:
  Bug#35305: partition_symlink test failure
  
  Changes due to bug 32167
mysql-test/t/symlink.test:
  using replace_result instead of disable_query_log
sql/partition_info.cc:
  corrected spelling
sql/sql_parse.cc:
  corrected spelling